--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -591,6 +591,7 @@ if (!is_android) {
       "//brave/chromium_src/third_party/blink/public/platform/disable_client_hints_browsertest.cc",
       "//brave/chromium_src/third_party/blink/renderer/core/frame/reporting_observer_browsertest.cc",
       "//brave/common/brave_channel_info_browsertest.cc",
+      "//brave/components/brave_search/browser/brave_search_browsertest.cc",
       "//brave/components/brave_shields/browser/https_everywhere_service_browsertest.cc",
       "//brave/components/brave_shields/browser/tracking_protection_service_browsertest.cc",
       "//brave/components/content_settings/renderer/brave_content_settings_agent_impl_autoplay_browsertest.cc",
