1. Use GetStringOption to fetch the PaymentServiceUrl 2. Use buildflag ENABLE_PAY_WITH_BAT to gate android specific code 3. Fix gn_check issues, deps and layering violations 4. Fix patches 5. Added tests 6. Fix patch for: third_party-blink-renderer-modules-payments-payment_request.cc.patch 7. removed base::Unretained for OnSKUProcessed 8. moved rewards service factory outside payment_request.cc 9. removing RewardsServiceFactory::FromBrowserContext 10. removing transactions:transfer:self 11. tslint fixes

--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -393,7 +393,11 @@ source_set("browser_process") {
       ]
 
       deps += [
-        "//third_party/libaddressinput"
+        "//base",
+        "//components/payments/content/",
+        "//components/payments/core/",
+        "//components/web_modal/",
+        "//ui/web_dialogs/",
       ]
     }
 
