--- a/components/brave_rewards/common/BUILD.gn
+++ b/components/brave_rewards/common/BUILD.gn
@@ -1,5 +1,4 @@
 import("//brave/build/config.gni")
-import("//brave/components/payments/content/buildflags/buildflags.gni")
 
 source_set("features") {
   sources = [
@@ -12,18 +11,13 @@ source_set("features") {
 
 source_set("common") {
   sources = [
+    "constants.cc",
+    "constants.h",
     "pref_names.cc",
     "pref_names.h",
     "url_constants.cc",
-    "url_constants.h"
+    "url_constants.h",
   ]
-
-  if (enable_pay_with_bat) {
-    sources += [
-      "constants.cc",
-      "constants.h"
-    ]
-  }
 
   deps = [ ":features" ]
 }
