Moving ShowDialog code to chrome_payment_request_delegate

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -61,6 +61,7 @@ source_set("ui") {
 
     deps = [
       "//base",
+      "//brave/vendor/bat-native-ledger:headers",
       "//components/payments/content/",
       "//components/payments/core/",
       "//components/web_modal/",
